# dynamo-kad

./: .gitignore  Cargo.toml  Justfile  README.md  REPORT.md  config.example.yaml
.github/workflows/: ci.yml
crates/admin/: Cargo.toml  README.md
crates/admin/src/: lib.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs
crates/kad/: Cargo.toml  README.md
crates/kad/src/: chaos.rs  key.rs  lib.rs  lookup.rs  node_info.rs  refresh.rs  routing_table.rs  rpc.rs  store.rs
crates/kv/: Cargo.toml  README.md
crates/kv/benches/: kv_bench.rs
crates/kv/src/: chaos.rs  coordinator.rs  hint_delivery.rs  hint_store.rs  lib.rs  merkle.rs  placement.rs  replica_client.rs  vclock.rs
crates/kv/tests/: chaos_integration.rs
crates/metrics/: Cargo.toml  README.md
crates/metrics/src/: lib.rs
crates/net/: Cargo.toml  README.md
crates/net/src/: client.rs  convert.rs  lib.rs  replica_client.rs  server.rs
crates/net/tests/: integration.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: main.rs
crates/proto/: Cargo.toml  README.md  build.rs
crates/proto/src/: lib.rs
crates/storage/: Cargo.toml  README.md
crates/storage/benches/: storage_bench.rs
crates/storage/src/: engine.rs  lib.rs  memtable.rs  record.rs  wal.rs
deploy/: HANDOFF.md  cluster.conf  dynamoctl.sh  experiment.sh  workload.sh
deploy/plots/: main.py  pyproject.toml
deploy/results/20260217-030352/: REPORT.md  concurrency_scaling.csv  concurrent_throughput.csv  concurrent_throughput_summary.txt  convergence.csv  convergence_summary.txt  fault_tolerance.csv  fault_tolerance_summary.txt  latency.csv  latency_summary.txt  latency_under_load.csv  latency_under_load_summary.txt  metrics.csv  per_node_latency.csv  rejoin.csv  rejoin_summary.txt  replication.csv  replication_summary.txt  stats.csv  throughput.csv  throughput_summary.txt  value_sizes.csv  value_sizes_summary.txt  vector_clocks.csv  vector_clocks_summary.txt
specs/v1/: admin.proto  common.proto  kad.proto  kv.proto
