[package]
name = "dynamo-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
sha1 = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
