[package]
name = "dynamo-kv"
version = "0.1.0"
edition.workspace = true

[dependencies]
dynamo-common = { workspace = true }
dynamo-kad = { workspace = true }
dynamo-storage = { workspace = true }
dynamo-config = { workspace = true }
dynamo-metrics = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "kv_bench"
harness = false

[lints]
workspace = true
