[package]
name = "dynamo-metrics"
version = "0.1.0"
edition.workspace = true

[dependencies]
prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
bytes = { workspace = true }

[lints]
workspace = true
