[package]
name = "dynamo-net"
version = "0.1.0"
edition.workspace = true

[dependencies]
dynamo-common = { workspace = true }
dynamo-proto = { workspace = true }
dynamo-kad = { workspace = true }
dynamo-kv = { workspace = true }
dynamo-storage = { workspace = true }
dynamo-config = { workspace = true }
dynamo-metrics = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }

[lints]
workspace = true
