[package]
name = "dynamo-storage"
version = "0.1.0"
edition.workspace = true

[dependencies]
dynamo-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crc32fast = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false

[lints]
workspace = true
